search and view books
