# src/api/index.ts
@@ -9,10 +9,8 @@ export type { OpenAPIConfig } from './core/OpenAPI';
 
 export type { BookLikeCreateDto } from './models/BookLikeCreateDto';
 export type { BookPostEditDto } from './models/BookPostEditDto';
-export type { BorrowRequestActionDto } from './models/BorrowRequestActionDto';
 export type { BorrowRequestCreateDto } from './models/BorrowRequestCreateDto';
 export type { CommentCreateDto } from './models/CommentCreateDto';
-export type { IFormFile } from './models/IFormFile';
 export type { LoginRequest } from './models/LoginRequest';
 export type { RegisterRequest } from './models/RegisterRequest';
 export type { ReplyCreateDto } from './models/ReplyCreateDto';
@@ -20,3 +18,4 @@ export type { ReplyCreateDto } from './models/ReplyCreateDto';
 export { AuthService } from './services/AuthService';
 export { BookPostsService } from './services/BookPostsService';
 export { BorrowRequestsService } from './services/BorrowRequestsService';
+export { RepliesService } from './services/RepliesService';
