# src/api/services/RepliesService.ts
@@ -2,40 +2,40 @@
 /* istanbul ignore file */
 /* tslint:disable */
 /* eslint-disable */
-import type { LoginRequest } from '../models/LoginRequest';
-import type { RegisterRequest } from '../models/RegisterRequest';
+import type { ReplyCreateDto } from '../models/ReplyCreateDto';
 import type { CancelablePromise } from '../core/CancelablePromise';
 import { OpenAPI } from '../core/OpenAPI';
 import { request as __request } from '../core/request';
-export class AuthService {
+export class RepliesService {
     /**
      * @param requestBody
      * @returns any OK
      * @throws ApiError
      */
-    public static postAuth(
-        requestBody: LoginRequest,
+    public static postApiReplies(
+        requestBody: ReplyCreateDto,
     ): CancelablePromise<any> {
         return __request(OpenAPI, {
             method: 'POST',
-            url: '/auth',
+            url: '/api/replies',
             body: requestBody,
             mediaType: 'application/json',
         });
     }
     /**
-     * @param requestBody
+     * @param commentId
      * @returns any OK
      * @throws ApiError
      */
-    public static postAuthRegister(
-        requestBody: RegisterRequest,
+    public static getApiRepliesComments(
+        commentId: number,
     ): CancelablePromise<any> {
         return __request(OpenAPI, {
-            method: 'POST',
-            url: '/auth/register',
-            body: requestBody,
-            mediaType: 'application/json',
+            method: 'GET',
+            url: '/api/replies/comments/{commentId}',
+            path: {
+                'commentId': commentId,
+            },
         });
     }
 }
